# DomainSocket

./: .gitignore  Makefile.am  README  configure.ac
net/: AT.cc  AT.h  Define.h  DialInfo.h  Makefile.am  dsi_netctrl_dial  glib.cc  glib.h  main.cc  network.h  profile.h  serial.cc  serial.h
src/: Client.c  Makefile.am  Makefile.in  Server.cc  Server_c.cc  ioManager.c
src/inc/: Client.h  Server.h
src/incs/: Client++.h  Client.h  CommonDef.h  Server.h  ioManager.h
test/: ClientMain.c  ClientMain.cc  Makefile.am  ServerMain.c  ServerMain.cc
